# zahnklinik-voice-agent

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PROJEKT.md  PUSH_ANLEITUNG.md  README.md  SECURITY.md  agent.py  config.py  plan.md  pyproject.toml  requirements.txt  run.sh  whisper_stt.py
.github/workflows/: ci.yml
docs/audit/: security-audit-master-report-2026-07-08.md
