[project]
name = "zahnklinik-voice-agent"
version = "0.1.0"
description = "Lokaler Echtzeit-Sprach-Assistent für Zahnklinik mit LiveKit Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[openai,silero,turn-detector]~=1.3",
    "livekit-plugins-piper-tts",
    "faster-whisper",
    "soundfile",
    "numpy",
    "python-dotenv",
]

[project.scripts]
zahnklinik-agent = "agent:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["N818"]
